Stop visual bug where body shifts left when modal appears

--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,7 @@ html {
 #payments-table * {
   border-color: #bcbcc4;
 }
+
+body {
+  padding-right: 0px !important;
+}
